--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -383,7 +383,7 @@ class InternationalizationIntegrationTest {
     void testEnglishErrorMessage() throws Exception {
         mockMvc.perform(get("/api/boards/999")
                 .param("lang", "en"))
-            .andExpected(status().isNotFound())
+            .andExpect(status().isNotFound())
             .andExpect(jsonPath("$.detail").value(containsString("Board not found")));
     }
 }
