feat(validation): 도메인 검증 체계 전면 개선 및 커스텀 애너테이션 추가
주요 변경사항:
- 도메인별 커스텀 검증 애너테이션 생성 (Board, User)
- 필수 필드용 Valid* 애너테이션 추가 (ValidBoardTitle, ValidUsername 등)
- 선택 필드용 Optional* 애너테이션 추가 (OptionalBoardTitle, OptionalEmail 등)
- Command 객체에 검증 애너테이션 적용으로 서비스 계층 검증 강화
- DTO의 개별 제약조건을 커스텀 애너테이션으로 통일
- 모든 검증 메시지 i18n 지원 (한국어/영어)

세부 개선사항:
- CreateBoardCommand, UpdateBoardCommand: 게시글 검증 추가
- CreateUserCommand, UpdateUserCommand: 사용자 검증 추가
- IncrementViewCountCommand: boardId 검증 추가
- LoginCommand: ValidUsername, ValidPassword 사용
- LogoutCommand: userId 검증 강화
- BoardUpdateRequest, UserUpdateRequest: Optional* 애너테이션으로 전환

검증 구조:
- Entity: Assert로 도메인 독립성 유지
- Command: 애너테이션으로 서비스 계층 검증
- DTO: 프레젠테이션 계층 검증
- 메시지: properties 파일로 i18n 완벽 지원

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,6 +54,26 @@ user.duplicate.email=이미 사용 중인 이메일입니다
 user.profile.updated=프로필이 수정되었습니다
 user.deleted=회원 탈퇴가 완료되었습니다
 # ========================================
+# 사용자 검증 메시지
+# ========================================
+user.validation.username.required=사용자명은 필수입니다
+user.validation.username.size=사용자명은 3자 이상 20자 이하여야 합니다
+user.validation.username.pattern=사용자명은 영문, 숫자, 언더스코어만 사용 가능합니다
+user.validation.username.invalid=유효하지 않은 사용자명입니다
+user.validation.name.required=이름은 필수입니다
+user.validation.name.size=이름은 1자 이상 50자 이하여야 합니다
+user.validation.name.invalid=유효하지 않은 이름입니다
+user.validation.email.required=이메일은 필수입니다
+user.validation.email.format=올바른 이메일 형식이 아닙니다
+user.validation.email.size=이메일은 255자를 초과할 수 없습니다
+user.validation.email.invalid=유효하지 않은 이메일입니다
+user.validation.password.required=비밀번호는 필수입니다
+user.validation.password.size=비밀번호는 8자 이상 100자 이하여야 합니다
+user.validation.password.pattern=비밀번호는 영문 대소문자, 숫자, 특수문자를 포함해야 합니다
+user.validation.password.invalid=유효하지 않은 비밀번호입니다
+user.validation.userId.required=사용자 ID는 필수입니다
+user.validation.userId.positive=사용자 ID는 양수여야 합니다
+# ========================================
 # 세션 관련 로그 메시지
 # ========================================
 log.session.invalidated.user=사용자 {0} 의 {1} 개 세션이 무효화되었습니다
@@ -74,6 +94,19 @@ board.content.required=내용을 입력해주세요
 board.created=게시글이 작성되었습니다
 board.updated=게시글이 수정되었습니다
 board.deleted=게시글이 삭제되었습니다
+# ========================================
+# 게시글 검증 메시지
+# ========================================
+board.validation.title.required=게시글 제목은 필수입니다
+board.validation.title.size=게시글 제목은 200자를 초과할 수 없습니다
+board.validation.title.invalid=유효하지 않은 게시글 제목입니다
+board.validation.content.required=게시글 내용은 필수입니다
+board.validation.content.size=게시글 내용은 10,000자를 초과할 수 없습니다
+board.validation.content.invalid=유효하지 않은 게시글 내용입니다
+board.validation.authorId.required=작성자 ID는 필수입니다
+board.validation.authorId.positive=작성자 ID는 양수여야 합니다
+board.validation.boardId.required=게시글 ID는 필수입니다
+board.validation.boardId.positive=게시글 ID는 양수여야 합니다
 # ========================================
 # 일반 메시지
 # ========================================
