--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,6 +40,26 @@ user.duplicate.email=Email already in use
 user.profile.updated=Profile updated
 user.deleted=Account deleted
 # ========================================
+# User Validation Messages
+# ========================================
+user.validation.username.required=Username is required
+user.validation.username.size=Username must be between 3 and 20 characters
+user.validation.username.pattern=Username can only contain letters, numbers, and underscores
+user.validation.username.invalid=Invalid username
+user.validation.name.required=Name is required
+user.validation.name.size=Name must be between 1 and 50 characters
+user.validation.name.invalid=Invalid name
+user.validation.email.required=Email is required
+user.validation.email.format=Invalid email format
+user.validation.email.size=Email cannot exceed 255 characters
+user.validation.email.invalid=Invalid email
+user.validation.password.required=Password is required
+user.validation.password.size=Password must be between 8 and 100 characters
+user.validation.password.pattern=Password must contain uppercase, lowercase, numbers, and special characters
+user.validation.password.invalid=Invalid password
+user.validation.userId.required=User ID is required
+user.validation.userId.positive=User ID must be positive
+# ========================================
 # Board Related
 # ========================================
 board.not.found=Board not found
@@ -49,6 +69,19 @@ board.content.required=Content is required
 board.created=Board created
 board.updated=Board updated
 board.deleted=Board deleted
+# ========================================
+# Board Validation Messages
+# ========================================
+board.validation.title.required=Board title is required
+board.validation.title.size=Board title cannot exceed 200 characters
+board.validation.title.invalid=Invalid board title
+board.validation.content.required=Board content is required
+board.validation.content.size=Board content cannot exceed 10,000 characters
+board.validation.content.invalid=Invalid board content
+board.validation.authorId.required=Author ID is required
+board.validation.authorId.positive=Author ID must be positive
+board.validation.boardId.required=Board ID is required
+board.validation.boardId.positive=Board ID must be positive
 # ========================================
 # Common Messages
 # ========================================
