docs: remove Spring REST Docs + restdocs-api-spec; simplify springdoc config; drop REST Docs tests/config; add TODO.md with Javadoc/Dokka and doc strategy; adjust security whitelist

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -71,6 +71,9 @@ user.validation.password.required=비밀번호는 필수입니다
 user.validation.password.size=비밀번호는 8자 이상 100자 이하여야 합니다
 user.validation.password.pattern=비밀번호는 영문 대소문자, 숫자, 특수문자를 포함해야 합니다
 user.validation.password.invalid=유효하지 않은 비밀번호입니다
+user.validation.password.current.required=현재 비밀번호는 필수입니다
+user.validation.password.confirm.required=비밀번호 확인은 필수입니다
+user.validation.verification.code.required=검증 코드는 필수입니다
 user.validation.userId.required=사용자 ID는 필수입니다
 user.validation.userId.positive=사용자 ID는 양수여야 합니다
 # ========================================
@@ -85,6 +88,11 @@ log.session.ttl.extended=세션 {0} 의 TTL이 {1} 초 연장되었습니다
 log.user.created=사용자 생성: 사용자명={0}, 이메일={1}
 log.user.updated=사용자 정보 수정: 사용자명={0}
 log.user.deleted=사용자 삭제: 사용자명={0}
+log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드 불일치: userId={0}
+log.user.password.changed=패스워드 변경 완료: userId={0}, username={1}
+log.user.email.change.failed=이메일 변경 요청 실패 - 현재 패스워드 불일치: userId={0}
+log.user.email.verification.requested=이메일 변경 검증 요청: userId={0}, currentEmail={1}, newEmail={2}
+log.user.email.changed=이메일 변경 완료: userId={0}, oldEmail={1}, newEmail={2}
 # ========================================
 # 게시글 관련 로그 메시지
 # ========================================
@@ -135,3 +143,17 @@ common.invalid.input=입력값이 올바르지 않습니다
 common.save.success=저장되었습니다
 common.delete.success=삭제되었습니다
 common.update.success=수정되었습니다
+# ========================================
+# 사용자 에러 메시지
+# ========================================
+error.user.not-found.username=사용자를 찾을 수 없습니다: {0}
+error.user.not-found.id=사용자를 찾을 수 없습니다. ID: {0}
+error.user.username.already-exists=이미 사용 중인 사용자명입니다
+error.user.email.already-exists=이미 사용 중인 이메일입니다
+error.user.password.current.mismatch=현재 패스워드가 일치하지 않습니다
+error.user.password.confirm.mismatch=새 패스워드와 확인 패스워드가 일치하지 않습니다
+error.user.email.verification.invalid=유효하지 않거나 만료된 검증 코드입니다
+# ========================================
+# 정보 메시지
+# ========================================
+info.user.email.verification.sent=이메일 검증 코드가 발송되었습니다
