--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,6 +57,9 @@ user.validation.password.required=Password is required
 user.validation.password.size=Password must be between 8 and 100 characters
 user.validation.password.pattern=Password must contain uppercase, lowercase, numbers, and special characters
 user.validation.password.invalid=Invalid password
+user.validation.password.current.required=Current password is required
+user.validation.password.confirm.required=Password confirmation is required
+user.validation.verification.code.required=Verification code is required
 user.validation.userId.required=User ID is required
 user.validation.userId.positive=User ID must be positive
 # ========================================
@@ -136,6 +139,9 @@ error.user.not-found.id=User not found with ID: {0}
 error.board.not-found.id=Board not found with ID: {0}
 error.user.username.already-exists=Username already exists
 error.user.email.already-exists=Email already exists
+error.user.password.current.mismatch=Current password does not match
+error.user.password.confirm.mismatch=New password and confirm password do not match
+error.user.email.verification.invalid=Invalid or expired verification code
 # Detailed error messages
 error.method-not-allowed.detail=HTTP method not supported. Supported methods: {0}
 error.missing-parameter.detail=Required parameter missing: {0}
@@ -149,8 +155,14 @@ log.session.ttl.extended=Session {0} TTL extended by {1} seconds
 log.user.created=User created: username={0}, email={1}
 log.user.updated=User updated: username={0}
 log.user.deleted=User deleted: username={0}
+log.user.password.change.failed=Password change failed - current password mismatch: userId={0}
+log.user.password.changed=Password changed successfully: userId={0}, username={1}
+log.user.email.change.failed=Email change request failed - current password mismatch: userId={0}
+log.user.email.verification.requested=Email change verification requested: userId={0}, currentEmail={1}, newEmail={2}
+log.user.email.changed=Email changed successfully: userId={0}, oldEmail={1}, newEmail={2}
 # Board log messages
 log.board.created=Board created: ID={0}, title={1}, author={2}
 log.board.updated=Board updated: ID={0}, title={1}, author={2}
 log.board.deleted=Board deleted: ID={0}, author={1}
-log.board.view-count-increased=Board viewed: ID={0}, new count={1}
+log.board.view-count-increased=Board viewed: ID={0}, new count={1}# Information messages
+info.user.email.verification.sent=Email verification code has been sent
