--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -61,6 +61,9 @@ error.user.not-found.id=사용자를 찾을 수 없습니다. ID: {0}
 error.board.not-found.id=게시글을 찾을 수 없습니다. ID: {0}
 error.user.username.already-exists=이미 사용 중인 사용자명입니다
 error.user.email.already-exists=이미 사용 중인 이메일입니다
+error.user.password.current.mismatch=현재 패스워드가 일치하지 않습니다
+error.user.password.confirm.mismatch=새 패스워드와 확인 패스워드가 일치하지 않습니다
+error.user.email.verification.invalid=유효하지 않거나 만료된 검증 코드입니다
 # 상세 에러 메시지
 error.method-not-allowed.detail=지원하지 않는 HTTP 메서드입니다. 지원 메서드: {0}
 error.missing-parameter.detail=필수 파라미터가 누락되었습니다: {0}
@@ -74,3 +77,11 @@ log.auth.logout-success=👋 로그아웃 완료: 사용자 ID={0}
 log.session.invalidated.user=사용자 {0} 의 {1} 개 세션이 무효화되었습니다.
 log.session.invalidated.single=세션 {0} 이(가) 무효화되었습니다.
 log.session.ttl.extended=세션 {0} 의 TTL이 {1} 초 연장되었습니다.
+# 사용자 패스워드 및 이메일 변경 로그 메시지
+log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드 불일치: userId={0}
+log.user.password.changed=패스워드 변경 완료: userId={0}, username={1}
+log.user.email.change.failed=이메일 변경 요청 실패 - 현재 패스워드 불일치: userId={0}
+log.user.email.verification.requested=이메일 변경 검증 요청: userId={0}, currentEmail={1}, newEmail={2}
+log.user.email.changed=이메일 변경 완료: userId={0}, oldEmail={1}, newEmail={2}
+# 정보 메시지
+info.user.email.verification.sent=이메일 검증 코드가 발송되었습니다
