refactor: generalize business logging aspect

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,6 +83,12 @@ log.session.invalidated.user=사용자 {0} 의 {1} 개 세션이 무효화되었
 log.session.invalidated.single=세션 {0} 이(가) 무효화되었습니다
 log.session.ttl.extended=세션 {0} 의 TTL이 {1} 초 연장되었습니다
 # ========================================
+# 메소드 실행 로그 메시지
+# ========================================
+log.method.start=📥 메소드 시작: {0}({1})
+log.method.end=📤 메소드 완료: {0} = {1} ({2}ms)
+log.method.error=❌ 메소드 실패: {0} ({1}ms) - {2}
+# ========================================
 # 사용자 관련 로그 메시지
 # ========================================
 log.user.created=사용자 생성: 사용자명={0}, 이메일={1}
