refactor: avoid logging sensitive data

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -225,7 +225,7 @@ exception.title.unauthorized=인증 실패
 log.request.start=🌐 요청 시작: {0} {1} (IP: {2})
 log.request.end=🏁 요청 완료: {0} {1} [상태: {2}] ({3}ms)
 log.method.start=📥 메소드 시작: {0}({1})
-log.method.end=📤 메소드 완료: {0} = {1} ({2}ms)
+log.method.end=📤 메소드 완료: {0} ({1}ms)
 ```
 
 ### Validation Messages
@@ -310,7 +310,7 @@ public class LoggingAspect {
         
         // 완료 로그 (다국어)
         String endMessage = MessageUtils.getMessageStatic(
-            "log.method.end", methodName, result, executionTime
+            "log.method.end", methodName, executionTime
         );
         log.info(endMessage);
         
