--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -86,7 +86,7 @@ log.session.ttl.extended=세션 {0} 의 TTL이 {1} 초 연장되었습니다
 # 메소드 실행 로그 메시지
 # ========================================
 log.method.start=📥 메소드 시작: {0}
-log.method.end=📤 메소드 완료: {0} = {1} ({2}ms)
+log.method.end=📤 메소드 완료: {0} ({1}ms)
 log.method.error=❌ 메소드 실패: {0} ({1}ms) - {2}
 # ========================================
 # 사용자 관련 로그 메시지
