--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -112,7 +112,7 @@ data.welcome.board.title=Welcome to Board Hole!
 data.welcome.board.content=This is the first post. Feel free to browse and create your own posts!
 # AOP log messages English
 log.method.start=📥 Method started: {0}({1})
-log.method.end=📤 Method completed: {0} = {1} ({2}ms)
+log.method.end=📤 Method completed: {0} ({1}ms)
 log.method.error=❌ Method failed: {0} ({1}ms) - {2}
 log.performance.warning=⚠️ Performance warning: {0} took {1}ms (exceeds threshold)
 # Security log messages English
