--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -24,7 +24,7 @@ data.welcome.board.title=Board Hole에 오신 것을 환영합니다!
 data.welcome.board.content=첫 번째 게시글입니다. 자유롭게 둘러보고 게시물을 작성해 보세요!
 # AOP 로그 메시지
 log.method.start=📥 메소드 시작: {0}({1})
-log.method.end=📤 메소드 완료: {0} = {1} ({2}ms)
+log.method.end=📤 메소드 완료: {0} ({1}ms)
 log.method.error=❌ 메소드 실패: {0} ({1}ms) - {2}
 log.performance.warning=⚠️ 성능 경고: {0} 실행시간 {1}ms 초과
 # 보안 로그 메시지
