--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -65,6 +65,9 @@ log.session.ttl.extended=세션 {0} 의 TTL이 {1} 초 연장되었습니다
 log.method.start=📥 메소드 시작: {0}
 log.method.end=📤 메소드 완료: {0} ({1}ms)
 log.method.error=❌ 메소드 실패: {0} ({1}ms) - {2}
+log.performance.warning=⚠️ 성능 경고: {0} 실행시간 {1}ms 초과
+log.request.start=🌐 요청 시작: {0} {1} (IP: {2})
+log.request.end=🏁 요청 완료: {0} {1} [상태: {2}] ({3}ms)
 # ========================================
 # 사용자 관련 로그 메시지
 # ========================================
@@ -83,6 +86,7 @@ log.board.created=게시글 생성: ID={0}, 제목={1}, 작성자={2}
 log.board.updated=게시글 수정: ID={0}, 제목={1}, 작성자={2}
 log.board.deleted=게시글 삭제: ID={0}, 작성자={1}
 log.board.view-count-increased=게시글 조회: ID={0}, 새 조회수={1}
+log.board.welcome.created=📋 기본 환영 게시글 생성 완료
 # ========================================
 # 인증 로그 메시지
 # ========================================
@@ -90,11 +94,22 @@ log.auth.login-success=✅ 로그인 성공: 사용자={0}, ID={1}
 log.auth.login-failed=❌ 로그인 실패: 사용자={0}
 log.auth.logout-success=👋 로그아웃 완료: 사용자 ID={0}
 log.auth.token-validation-failed=❌ 토큰 검증 실패
+log.user.init.start=👥 기본 사용자 계정 확인 시작
+log.user.admin.created=👑 기본 관리자 계정 생성 완료: {0}
+log.user.admin.exists=👑 관리자 계정이 이미 존재합니다: {0}
+log.user.regular.created=👤 기본 사용자 계정 생성 완료: {0}
+log.user.regular.exists=👤 사용자 계정이 이미 존재합니다: {0}
 # ========================================
 # 기본 데이터 메시지
 # ========================================
 data.welcome.board.title=Board Hole에 오신 것을 환영합니다!
 data.welcome.board.content=첫 번째 게시글입니다. 자유롭게 둘러보고 게시물을 작성해 보세요!
+mask.password=🔒[MASKED_PASSWORD]
+mask.token=🎫[MASKED_TOKEN]
+mask.secret=🔐[MASKED_SECRET]
+mask.sensitive=🚫[MASKED_SENSITIVE]
+mask.credential=🗝[MASKED_CREDENTIAL]
+mask.key=🔑[MASKED_KEY]
 # ========================================
 # 게시글 관련
 # ========================================
@@ -124,6 +139,84 @@ error.user.email.already-exists=이미 사용 중인 이메일입니다
 error.user.password.current.mismatch=현재 패스워드가 일치하지 않습니다
 error.user.password.confirm.mismatch=새 패스워드와 확인 패스워드가 일치하지 않습니다
 error.user.email.verification.invalid=유효하지 않거나 만료된 검증 코드입니다
+# 유효성 검증 메시지 (통합)
+
+# Bean Validation 기본 메시지 (한글)
+jakarta.validation.constraints.Null.message=null이어야 합니다
+jakarta.validation.constraints.NotNull.message=필수 입력 항목입니다
+jakarta.validation.constraints.AssertTrue.message=true여야 합니다
+jakarta.validation.constraints.AssertFalse.message=false여야 합니다
+jakarta.validation.constraints.NotEmpty.message=비어있을 수 없습니다
+jakarta.validation.constraints.NotBlank.message=공백일 수 없습니다
+jakarta.validation.constraints.Size.message=크기가 {min}에서 {max} 사이여야 합니다
+jakarta.validation.constraints.Pattern.message=입력 형식이 올바르지 않습니다
+jakarta.validation.constraints.Email.message=올바른 이메일 형식이 아닙니다
+jakarta.validation.constraints.Min.message=최소값은 {value}입니다
+jakarta.validation.constraints.Max.message=최대값은 {value}입니다
+jakarta.validation.constraints.DecimalMin.message=최소값은 {value}입니다
+jakarta.validation.constraints.DecimalMax.message=최대값은 {value}입니다
+jakarta.validation.constraints.Positive.message=양수여야 합니다
+jakarta.validation.constraints.PositiveOrZero.message=0 이상이어야 합니다
+jakarta.validation.constraints.Negative.message=음수여야 합니다
+jakarta.validation.constraints.NegativeOrZero.message=0 이하여야 합니다
+jakarta.validation.constraints.Digits.message=숫자는 정수 {integer}자리, 소수 {fraction}자리 이내여야 합니다
+jakarta.validation.constraints.Past.message=과거 날짜여야 합니다
+jakarta.validation.constraints.PastOrPresent.message=현재 또는 과거 날짜여야 합니다
+jakarta.validation.constraints.Future.message=미래 날짜여야 합니다
+jakarta.validation.constraints.FutureOrPresent.message=현재 또는 미래 날짜여야 합니다
+
+# 사용자 검증
+validation.user.username.required=사용자명을 입력해주세요
+validation.user.username.size=사용자명은 3-20자 사이여야 합니다
+validation.user.username.invalid=유효하지 않은 사용자명입니다
+validation.user.password.required=비밀번호를 입력해주세요
+validation.user.password.size=비밀번호는 8-100자 사이여야 합니다
+validation.user.password.pattern=비밀번호는 영문 대소문자, 숫자, 특수문자를 포함해야 합니다
+validation.user.password.invalid=유효하지 않은 비밀번호입니다
+validation.user.password.current.required=현재 비밀번호를 입력해주세요
+validation.user.password.confirm.required=비밀번호 확인을 입력해주세요
+validation.user.name.required=이름을 입력해주세요
+validation.user.name.size=이름은 1-50자 사이여야 합니다
+validation.user.name.invalid=유효하지 않은 이름입니다
+validation.user.email.required=이메일을 입력해주세요
+validation.user.email.format=올바른 이메일 형식으로 입력해주세요
+validation.user.email.size=이메일은 255자를 초과할 수 없습니다
+validation.user.email.invalid=유효하지 않은 이메일입니다
+validation.user.username.too-long=사용자명이 너무 깁니다 (최대 {0}자)
+validation.user.username.too-short=사용자명이 너무 짧습니다 (최소 {0}자)
+validation.user.name.too-long=이름이 너무 깁니다 (최대 {0}자)
+validation.user.name.too-short=이름이 너무 짧습니다 (최소 {0}자)
+validation.user.password.too-short=비밀번호가 너무 짧습니다 (최소 {0}자)
+validation.user.password.too-long=비밀번호가 너무 깁니다 (최대 {0}자)
+validation.user.email.too-long=이메일이 너무 깁니다 (최대 {0}자)
+
+# 게시글 검증
+validation.board.title.required=제목을 입력해주세요
+validation.board.title.size=제목은 200자를 초과할 수 없습니다
+validation.board.title.too-long=제목이 너무 깁니다 (최대 {0}자)
+validation.board.title.invalid=유효하지 않은 제목입니다
+validation.board.content.required=내용을 입력해주세요
+validation.board.content.size=내용은 10,000자를 초과할 수 없습니다
+validation.board.content.too-long=내용이 너무 깁니다 (최대 {0}자)
+validation.board.content.invalid=유효하지 않은 내용입니다
+validation.board.author.required=작성자는 필수입니다
+
+# 이메일 인증 검증 (dot 표기)
+validation.email.verification.code.required=인증 코드를 입력해주세요
+validation.email.verification.userId.required=사용자 ID는 필수입니다
+validation.email.verification.newEmail.required=새 이메일을 입력해주세요
+validation.email.verification.expiresAt.required=만료 시간은 필수입니다
+validation.email.verification.already-used=이미 사용된 검증 코드입니다
+validation.email.verification.expired=만료된 검증 코드입니다
+validation.email.verification.type.required=인증 유형은 필수입니다
+
+# 공통 ID/참조 검증
+validation.user.userId.required=사용자 ID는 필수입니다
+validation.user.userId.positive=사용자 ID는 양수여야 합니다
+validation.board.boardId.required=게시글 ID는 필수입니다
+validation.board.boardId.positive=게시글 ID는 양수여야 합니다
+validation.board.authorId.required=작성자 ID는 필수입니다
+validation.board.authorId.positive=작성자 ID는 양수여야 합니다
 # ========================================
 # 이메일 인증 관련
 # ========================================
