--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -106,6 +106,84 @@ error.user.email.already-exists=Email already exists
 error.user.password.current.mismatch=Current password does not match
 error.user.password.confirm.mismatch=New password and confirm password do not match
 error.user.email.verification.invalid=Invalid or expired verification code
+# Validation messages (consolidated)
+
+# Standard Bean Validation defaults (English)
+jakarta.validation.constraints.Null.message=must be null
+jakarta.validation.constraints.NotNull.message=is required
+jakarta.validation.constraints.AssertTrue.message=must be true
+jakarta.validation.constraints.AssertFalse.message=must be false
+jakarta.validation.constraints.NotEmpty.message=cannot be empty
+jakarta.validation.constraints.NotBlank.message=cannot be blank
+jakarta.validation.constraints.Size.message=size must be between {min} and {max}
+jakarta.validation.constraints.Pattern.message=must match the pattern
+jakarta.validation.constraints.Email.message=must be a well-formed email address
+jakarta.validation.constraints.Min.message=must be greater than or equal to {value}
+jakarta.validation.constraints.Max.message=must be less than or equal to {value}
+jakarta.validation.constraints.DecimalMin.message=must be greater than or equal to {value}
+jakarta.validation.constraints.DecimalMax.message=must be less than or equal to {value}
+jakarta.validation.constraints.Positive.message=must be positive
+jakarta.validation.constraints.PositiveOrZero.message=must be greater than or equal to 0
+jakarta.validation.constraints.Negative.message=must be negative
+jakarta.validation.constraints.NegativeOrZero.message=must be less than or equal to 0
+jakarta.validation.constraints.Digits.message=numeric value out of bounds (<{integer} digits>.<{fraction} digits> expected)
+jakarta.validation.constraints.Past.message=must be a past date
+jakarta.validation.constraints.PastOrPresent.message=must be a date in the past or in the present
+jakarta.validation.constraints.Future.message=must be a future date
+jakarta.validation.constraints.FutureOrPresent.message=must be a date in the present or in the future
+
+# User validation
+validation.user.username.required=Please enter username
+validation.user.username.size=Username must be between 3 and 20 characters
+validation.user.username.invalid=Invalid username
+validation.user.password.required=Please enter password
+validation.user.password.size=Password must be between 8 and 100 characters
+validation.user.password.pattern=Password must contain uppercase, lowercase, numbers, and special characters
+validation.user.password.invalid=Invalid password
+validation.user.password.current.required=Please enter current password
+validation.user.password.confirm.required=Please enter password confirmation
+validation.user.name.required=Please enter name
+validation.user.name.size=Name must be between 1 and 50 characters
+validation.user.name.invalid=Invalid name
+validation.user.email.required=Please enter email
+validation.user.email.format=Please enter a valid email format
+validation.user.email.size=Email cannot exceed 255 characters
+validation.user.email.invalid=Invalid email
+validation.user.username.too-long=Username is too long (max {0} characters)
+validation.user.username.too-short=Username is too short (min {0} characters)
+validation.user.name.too-long=Name is too long (max {0} characters)
+validation.user.name.too-short=Name is too short (min {0} character)
+validation.user.password.too-short=Password is too short (min {0} characters)
+validation.user.password.too-long=Password is too long (max {0} characters)
+validation.user.email.too-long=Email is too long (max {0} characters)
+
+# Board validation
+validation.board.title.required=Title is required
+validation.board.title.size=Title cannot exceed 200 characters
+validation.board.title.too-long=Title is too long (max {0} characters)
+validation.board.title.invalid=Invalid title
+validation.board.content.required=Content is required
+validation.board.content.size=Content cannot exceed 10,000 characters
+validation.board.content.too-long=Content is too long (max {0} characters)
+validation.board.content.invalid=Invalid content
+validation.board.author.required=Author is required
+
+# Email verification (dot notation)
+validation.email.verification.code.required=Email verification code is required
+validation.email.verification.userId.required=User ID is required
+validation.email.verification.newEmail.required=Please enter new email
+validation.email.verification.expiresAt.required=Expiration time is required
+validation.email.verification.already-used=Verification code already used
+validation.email.verification.expired=Verification code expired
+validation.email.verification.type.required=Verification type is required
+
+# Common ID/reference
+validation.user.userId.required=User ID is required
+validation.user.userId.positive=User ID must be positive
+validation.board.boardId.required=Board ID is required
+validation.board.boardId.positive=Board ID must be positive
+validation.board.authorId.required=Author ID is required
+validation.board.authorId.positive=Author ID must be positive
 # Detailed error messages
 error.method-not-allowed.detail=HTTP method not supported. Supported methods: {0}
 error.missing-parameter.detail=Required parameter missing: {0}
