chore: remove open redirect; security cleanup; validation fix; messages dedup; workflow simplification (master-only build)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,15 +63,6 @@ log.user.regular.exists=👤 일반 사용자 계정이 이미 존재합니다: 
 # ========================================
 log.request.start=🌐 요청 시작: {0} {1} from {2}
 log.request.end=🌐 요청 완료: {0} {1} [{2}] ({3}ms)
-# ========================================
-# 마스킹 메시지
-# ========================================
-mask.password=***PASSWORD***
-mask.token=***TOKEN***
-mask.secret=***SECRET***
-mask.credential=***CREDENTIAL***
-mask.key=***KEY***
-mask.sensitive=***SENSITIVE***
 log.board.updated=게시글 수정됨: ID={0}, 제목={1}, 작성자={2}
 log.board.deleted=게시글 삭제됨: ID={0}, 제목={1}, 작성자={2}
 # ========================================
@@ -146,8 +137,18 @@ exception.title.validation-failed=유효성 검증 실패
 exception.title.bad-request=잘못된 요청
 exception.title.internal-error=내부 서버 오류
 exception.title.email-verification-required=이메일 인증 필요
+exception.title.method-not-allowed=허용되지 않은 메서드
+exception.title.unsupported-media-type=지원하지 않는 미디어 타입
+exception.title.missing-parameter=필수 파라미터 누락
+exception.title.type-mismatch=타입 불일치
+exception.title.payload-too-large=요청 크기 초과
+exception.title.service-unavailable=서비스 이용 불가
 error.internal=서버 내부 오류가 발생했습니다
 error.conflict=데이터 충돌이 발생했습니다
+error.resource.not-found=요청한 리소스를 찾을 수 없습니다
+error.locking.conflict=동시 수정으로 인한 충돌이 발생했습니다
+error.upload.size-exceeded=업로드 파일 크기가 제한을 초과했습니다. 최대 크기: {0}
+error.request.timeout=요청 처리 시간이 초과되었습니다
 
 # ========================================
 # 에러 상세/공통 메시지 (전역 예외 처리용)
