refactor: MessageSource를 MessageUtils로 통합 및 중앙 집중화
• 모든 로깅 클래스에서 MessageSource 직접 사용을 MessageUtils로 변경
  - LoggingAspect, DataInitializer, RequestLoggingFilter, LogFormatter 수정
  - 의존성 주입 간소화 및 코드 일관성 향상

• 하드코딩된 로그 메시지를 국제화 메시지로 변경
  - 요청 처리 실패, 메소드 실행 오류, 성능 경고 메시지 추가
  - messages.properties 파일에 새로운 로깅 키 추가

• 불필요한 MessageSource 의존성 제거
  - Exception 클래스들에서 사용되지 않는 messageSource 필드 삭제
  - 테스트 코드 생성자 시그니처 수정으로 호환성 보장

• 메시지 관리 중앙 집중화
  - 프로젝트 전체에서 MessageUtils를 통한 일관된 메시지 처리
  - 국제화 지원 강화 및 유지보수성 개선

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,6 +49,17 @@ log.security.auth.failure=❌ 인증 실패: {0}
 log.security.auth.success=✅ 인증 성공: {0}
 log.security.authorized.access=🔓 인가된 접근: {0}
 # ========================================
+# 로그 메시지 - 요청 처리
+# ========================================
+log.request.format.failed.start=요청 로그 포맷팅 실패 (시작): {0} {1} - {2}
+log.request.format.failed.end=요청 로그 포맷팅 실패 (종료): {0} {1} [{2}] - {3}
+# ========================================
+# 로그 메시지 - 메소드 실행
+# ========================================
+log.method.format.failed=로그 포맷팅 실패: {0} - {1}
+log.method.format.failed.with.error=로그 포맷팅 실패: {0} - {1} (원본 에러: {2})
+log.performance.warning=⚠️ 성능 경고: {0} - {1}ms
+# ========================================
 # 로그 메시지 - 게시판 관련
 # ========================================
 log.board.created=게시글 생성됨: ID={0}, 제목={1}, 작성자={2}
@@ -87,8 +98,10 @@ success.email-verification.resent=인증 이메일이 재발송되었습니다
 validation.board.author.required=작성자는 필수입니다
 validation.board.boardId.required=게시글 ID는 필수입니다
 validation.board.content.required=내용을 입력해주세요
+validation.board.content.size=내용이 너무 깁니다 (최대 {0}자)
 validation.board.content.too-long=내용이 너무 깁니다 (최대 {0}자)
 validation.board.title.required=제목을 입력해주세요
+validation.board.title.size=제목이 너무 깁니다 (최대 {0}자)
 validation.board.title.too-long=제목이 너무 깁니다 (최대 {0}자)
 # ========================================
 # 유효성 검증 - 이메일 인증 관련
@@ -149,6 +162,8 @@ exception.title.payload-too-large=요청 크기 초과
 exception.title.service-unavailable=서비스 이용 불가
 error.internal=서버 내부 오류가 발생했습니다
 error.conflict=데이터 충돌이 발생했습니다
+error.invalid-sort-field=잘못된 정렬 필드입니다: {0}
+error.invalid-sort-direction=잘못된 정렬 방향입니다: {0} (허용: asc, desc)
 error.resource.not-found=요청한 리소스를 찾을 수 없습니다
 error.locking.conflict=동시 수정으로 인한 충돌이 발생했습니다
 error.upload.size-exceeded=업로드 파일 크기가 제한을 초과했습니다. 최대 크기: {0}
