--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -49,6 +49,17 @@ log.security.auth.failure=❌ Authentication failed: {0}
 log.security.auth.success=✅ Authentication successful: {0}
 log.security.authorized.access=🔓 Authorized access: {0}
 # ========================================
+# Log Messages - Request Processing Errors
+# ========================================
+log.request.format.failed.start=Request log formatting failed (start): {0} {1} - {2}
+log.request.format.failed.end=Request log formatting failed (end): {0} {1} [{2}] - {3}
+# ========================================
+# Log Messages - Method Execution Errors
+# ========================================
+log.method.format.failed=Log formatting failed for {0}: {1}
+log.method.format.failed.with.error=Log formatting failed for {0}: {1} (original error: {2})
+log.performance.warning=⚠️ Performance warning: {0} - {1}ms
+# ========================================
 # Log Messages - Board
 # ========================================
 log.board.created=Board created: ID={0}, title={1}, author={2}
@@ -82,14 +93,18 @@ log.user.password.change.failed=Password change failed - current password mismat
 success.email-verification.completed=Email verification completed
 success.email-verification.resent=Verification email resent
 error.conflict=Conflict occurred
+error.invalid-sort-field=Invalid sort field: {0}
+error.invalid-sort-direction=Invalid sort direction: {0} (allowed: asc, desc)
 # ========================================
 # Validation - Board
 # ========================================
 validation.board.author.required=Author is required
 validation.board.boardId.required=Board ID is required
 validation.board.content.required=Content is required
+validation.board.content.size=Content is too long (max {0} characters)
 validation.board.content.too-long=Content is too long (max {0} characters)
 validation.board.title.required=Title is required
+validation.board.title.size=Title is too long (max {0} characters)
 validation.board.title.too-long=Title is too long (max {0} characters)
 # ========================================
 # Validation - Email Verification
