--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -49,6 +49,17 @@ log.security.auth.failure=❌ 인증 실패: {0}
 log.security.auth.success=✅ 인증 성공: {0}
 log.security.authorized.access=🔓 인가된 접근: {0}
 # ========================================
+# 로그 메시지 - 요청 처리 오류
+# ========================================
+log.request.format.failed.start=요청 로그 포맷팅 실패 (시작): {0} {1} - {2}
+log.request.format.failed.end=요청 로그 포맷팅 실패 (종료): {0} {1} [{2}] - {3}
+# ========================================
+# 로그 메시지 - 메소드 실행 오류
+# ========================================
+log.method.format.failed=로그 포맷팅 실패: {0} - {1}
+log.method.format.failed.with.error=로그 포맷팅 실패: {0} - {1} (원본 에러: {2})
+log.performance.warning=⚠️ 성능 경고: {0} - {1}ms
+# ========================================
 # 로그 메시지 - 게시판 관련
 # ========================================
 log.board.created=게시글 생성됨: ID={0}, 제목={1}, 작성자={2}
@@ -82,14 +93,18 @@ log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드
 success.email-verification.completed=이메일 인증이 완료되었습니다
 success.email-verification.resent=인증 이메일이 재발송되었습니다
 error.conflict=데이터 충돌이 발생했습니다
+error.invalid-sort-field=잘못된 정렬 필드입니다: {0}
+error.invalid-sort-direction=잘못된 정렬 방향입니다: {0} (허용: asc, desc)
 # ========================================
 # 유효성 검증 - 게시판 관련
 # ========================================
 validation.board.author.required=작성자는 필수입니다
 validation.board.boardId.required=게시글 ID는 필수입니다
 validation.board.content.required=내용을 입력해주세요
+validation.board.content.size=내용이 너무 깁니다 (최대 {0}자)
 validation.board.content.too-long=내용이 너무 깁니다 (최대 {0}자)
 validation.board.title.required=제목을 입력해주세요
+validation.board.title.size=제목이 너무 깁니다 (최대 {0}자)
 validation.board.title.too-long=제목이 너무 깁니다 (최대 {0}자)
 # ========================================
 # 유효성 검증 - 이메일 인증 관련
@@ -115,6 +130,8 @@ validation.user.password.required=비밀번호를 입력해주세요
 validation.user.password.size=비밀번호는 {1}자 이상 {2}자 이하여야 합니다
 validation.user.password.pattern=비밀번호는 영문 대문자, 소문자, 숫자, 특수문자를 모두 포함해야 합니다
 validation.user.password.invalid=유효하지 않은 비밀번호입니다
+validation.user.password.encoded=비밀번호가 올바르게 암호화되지 않았습니다
+validation.user.password.invalid.encoded=비밀번호 암호화 형식이 올바르지 않습니다
 validation.user.username.required=사용자명을 입력해주세요
 validation.user.username.too-long=사용자명이 너무 깁니다 (최대 {0}자)
 validation.user.roles.empty=최소 하나의 권한이 필요합니다
