feat: 개선된 템플릿 및 API 설정, 사용자 요청 처리 로직 수정

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,6 +3,8 @@
 # Error Messages - Authentication
 # ========================================
 error.auth.invalid-credentials=Invalid username or password
+error.auth.invalid-username=Invalid username
+error.auth.invalid-password=Invalid password
 error.auth.email-verification-required=Email verification required
 # ========================================
 # Error Messages - Board
@@ -93,6 +95,9 @@ log.user.password.change.failed=Password change failed - current password mismat
 success.email-verification.completed=Email verification completed
 success.email-verification.resent=Verification email resent
 error.conflict=Conflict occurred
+error.access.denied=You do not have permission to access this page
+error.auth.required=Login is required to access this page
+error.general=A server error has occurred
 error.invalid-sort-field=Invalid sort field: {0}
 error.invalid-sort-direction=Invalid sort direction: {0} (allowed: asc, desc)
 # ========================================
@@ -124,16 +129,21 @@ validation.email.verification.userId.required=User ID is required
 # ========================================
 validation.user.email.required=Email is required
 validation.user.email.too-long=Email is too long (max {0} characters)
+validation.user.email.format=Please enter a valid email address
 validation.user.name.required=Name is required
 validation.user.name.too-long=Name is too long (max {0} characters)
+validation.user.name.size=Name must be between {min} and {max} characters
 validation.user.password.required=Password is required
-validation.user.password.size=Password must be between {1} and {2} characters
+validation.user.password.size=Password must be between {min} and {max} characters
 validation.user.password.pattern=Password must contain uppercase, lowercase, numbers, and special characters
 validation.user.password.invalid=Invalid password
 validation.user.password.encoded=Password is not properly encrypted
 validation.user.password.invalid.encoded=Invalid password encryption format
+validation.user.password.confirm.required=Password confirmation is required
+validation.field.match.mismatch=Passwords do not match
 validation.user.username.required=Username is required
 validation.user.username.too-long=Username is too long (max {0} characters)
+validation.user.username.size=Username must be between {min} and {max} characters
 validation.user.roles.empty=At least one role is required
 # ========================================
 # Masking Messages
