--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -3,6 +3,8 @@
 # 에러 메시지 - 인증 관련
 # ========================================
 error.auth.invalid-credentials=잘못된 사용자명 또는 비밀번호입니다
+error.auth.invalid-username=잘못된 사용자명입니다
+error.auth.invalid-password=잘못된 비밀번호입니다
 error.auth.email-verification-required=이메일 인증이 필요합니다
 # ========================================
 # 에러 메시지 - 게시판 관련
@@ -93,6 +95,9 @@ log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드
 success.email-verification.completed=이메일 인증이 완료되었습니다
 success.email-verification.resent=인증 이메일이 재발송되었습니다
 error.conflict=데이터 충돌이 발생했습니다
+error.access.denied=이 페이지에 접근할 권한이 없습니다
+error.auth.required=로그인이 필요한 페이지입니다
+error.general=서버 오류가 발생했습니다
 error.invalid-sort-field=잘못된 정렬 필드입니다: {0}
 error.invalid-sort-direction=잘못된 정렬 방향입니다: {0} (허용: asc, desc)
 # ========================================
@@ -124,16 +129,21 @@ validation.email.verification.userId.required=사용자 ID는 필수입니다
 # ========================================
 validation.user.email.required=이메일을 입력해주세요
 validation.user.email.too-long=이메일이 너무 깁니다 (최대 {0}자)
+validation.user.email.format=올바른 이메일 주소 형식이 아닙니다
 validation.user.name.required=이름을 입력해주세요
 validation.user.name.too-long=이름이 너무 깁니다 (최대 {0}자)
+validation.user.name.size=이름은 {min}자 이상 {max}자 이하여야 합니다
 validation.user.password.required=비밀번호를 입력해주세요
-validation.user.password.size=비밀번호는 {1}자 이상 {2}자 이하여야 합니다
+validation.user.password.size=비밀번호는 {min}자 이상 {max}자 이하여야 합니다
 validation.user.password.pattern=비밀번호는 영문 대문자, 소문자, 숫자, 특수문자를 모두 포함해야 합니다
 validation.user.password.invalid=유효하지 않은 비밀번호입니다
 validation.user.password.encoded=비밀번호가 올바르게 암호화되지 않았습니다
 validation.user.password.invalid.encoded=비밀번호 암호화 형식이 올바르지 않습니다
+validation.user.password.confirm.required=비밀번호 확인을 입력해주세요
+validation.field.match.mismatch=비밀번호가 일치하지 않습니다
 validation.user.username.required=사용자명을 입력해주세요
 validation.user.username.too-long=사용자명이 너무 깁니다 (최대 {0}자)
+validation.user.username.size=사용자명은 {min}자 이상 {max}자 이하여야 합니다
 validation.user.roles.empty=최소 하나의 권한이 필요합니다
 # ========================================
 # 마스킹 메시지
