refactor: 뷰 테스트 표준화 및 인증 구조 개선
- 뷰 테스트에서 @AutoConfigureMockMvc 제거 (불필요한 중복)
- 테스트 보안 설정 분리 (API/View 용도별 구분)
- AuthCommandService 통합 및 구조 개선
- MyPageViewController -> UserDetailViewController 이름 변경
- 템플릿 파일 구조 정리 (detail.html, users.html)
- 테스트 코드 간소화 (700+ 줄 감소)

BREAKING CHANGE: 뷰 컨트롤러 및 템플릿 경로 변경

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -144,6 +144,8 @@ validation.field.match.mismatch=Passwords do not match
 validation.user.username.required=Username is required
 validation.user.username.too-long=Username is too long (max {0} characters)
 validation.user.username.size=Username must be between {min} and {max} characters
+validation.user.username.pattern=Username may only contain letters and digits
+validation.user.username.invalid=Invalid username
 validation.user.roles.empty=At least one role is required
 # ========================================
 # Masking Messages
