--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -144,6 +144,8 @@ validation.field.match.mismatch=비밀번호가 일치하지 않습니다
 validation.user.username.required=사용자명을 입력해주세요
 validation.user.username.too-long=사용자명이 너무 깁니다 (최대 {0}자)
 validation.user.username.size=사용자명은 {min}자 이상 {max}자 이하여야 합니다
+validation.user.username.pattern=사용자명은 영문과 숫자만 사용할 수 있습니다
+validation.user.username.invalid=유효하지 않은 사용자명입니다
 validation.user.roles.empty=최소 하나의 권한이 필요합니다
 # ========================================
 # 마스킹 메시지
