refactor: AppUserPrincipal 삭제 및 UserDetails 사용으로 인증 구조 변경
- AppUserPrincipal 제거, Spring Security UserDetails로 대체
- AuthMapper 제거 및 auth application 계층 매퍼 통합
- User 및 username 기반 인증으로 전환
- ErrorViewController 추가 (403 에러 지원)
- 테스트 및 메시지 파일(authorId → authorUsername) 업데이트
- 코드 가독성 및 불필요한 코드 정리

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -88,7 +88,7 @@ log.user.created=User created: {0}, {1}
 log.user.updated=User updated: {0}, {1}
 log.user.deleted=User deleted: {0}, {1}
 log.user.email.change.failed=Email change failed: {0}
-log.user.password.change.failed=Password change failed - current password mismatch: userId={0}
+log.user.password.change.failed=Password change failed - current password mismatch: username={0}
 # ========================================
 # Success Messages
 # ========================================
@@ -104,6 +104,7 @@ error.invalid-sort-direction=Invalid sort direction: {0} (allowed: asc, desc)
 # Validation - Board
 # ========================================
 validation.board.author.required=Author is required
+validation.board.authorUsername.required=Author is required
 validation.board.boardId.required=Board ID is required
 validation.board.content.required=Content is required
 validation.board.content.size=Content is too long (max {0} characters)
@@ -144,7 +145,7 @@ validation.field.match.mismatch=Passwords do not match
 validation.user.username.required=Username is required
 validation.user.username.too-long=Username is too long (max {0} characters)
 validation.user.username.size=Username must be between {min} and {max} characters
-validation.user.username.pattern=Username may only contain letters and digits
+validation.user.username.pattern=Username may only contain letters, digits, and underscores (_)
 validation.user.username.invalid=Invalid username
 validation.user.roles.empty=At least one role is required
 # ========================================
