--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -88,7 +88,7 @@ log.user.created=사용자 생성됨: {0}, {1}
 log.user.updated=사용자 수정됨: {0}, {1}
 log.user.deleted=사용자 삭제됨: {0}, {1}
 log.user.email.change.failed=이메일 변경 실패: {0}
-log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드 불일치: userId={0}
+log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드 불일치: username={0}
 # ========================================
 # 성공 메시지
 # ========================================
@@ -104,6 +104,7 @@ error.invalid-sort-direction=잘못된 정렬 방향입니다: {0} (허용: asc,
 # 유효성 검증 - 게시판 관련
 # ========================================
 validation.board.author.required=작성자는 필수입니다
+validation.board.authorUsername.required=작성자는 필수입니다
 validation.board.boardId.required=게시글 ID는 필수입니다
 validation.board.content.required=내용을 입력해주세요
 validation.board.content.size=내용이 너무 깁니다 (최대 {0}자)
@@ -144,7 +145,7 @@ validation.field.match.mismatch=비밀번호가 일치하지 않습니다
 validation.user.username.required=사용자명을 입력해주세요
 validation.user.username.too-long=사용자명이 너무 깁니다 (최대 {0}자)
 validation.user.username.size=사용자명은 {min}자 이상 {max}자 이하여야 합니다
-validation.user.username.pattern=사용자명은 영문과 숫자만 사용할 수 있습니다
+validation.user.username.pattern=사용자명은 영문, 숫자, 밑줄(_)만 사용할 수 있습니다
 validation.user.username.invalid=유효하지 않은 사용자명입니다
 validation.user.roles.empty=최소 하나의 권한이 필요합니다
 # ========================================
