refactor: Board 뷰 컨트롤러 분리 및 에러 처리 개선
- BoardViewController를 목적별로 분리:
  - BoardListViewController: 게시글 목록 조회
  - BoardDetailViewController: 게시글 상세 조회
  - BoardDeleteViewController: 게시글 삭제 확인
- 에러 처리 기능 강화:
  - ViewControllerAdvice: 뷰 전용 예외 처리 추가
  - ErrorViewController: 공통 에러 뷰 컨트롤러 구현
  - 400 에러 페이지 템플릿 추가
- 메시지 국제화 개선:
  - 에러 관련 메시지 추가 (한국어, 영어)
- Thymeleaf 개발 및 디버그 설정 추가
- 각 컨트롤러에 대한 단위 테스트 추가

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -183,6 +183,7 @@ error.auth.not-logged-in=로그인이 필요합니다
 error.auth.access-denied=접근 권한이 없습니다
 error.access.denied=이 페이지에 접근할 권한이 없습니다
 error.auth.required=로그인이 필요한 페이지입니다
+error.bad-request=잘못된 요청 형식입니다
 error.general=서버 오류가 발생했습니다
 error.invalid-json=잘못된 JSON 요청 본문입니다
 error.validation-failed=요청 데이터 검증에 실패했습니다
