--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,6 +97,7 @@ success.email-verification.resent=Verification email resent
 error.conflict=Conflict occurred
 error.access.denied=You do not have permission to access this page
 error.auth.required=Login is required to access this page
+error.bad-request=Bad Request Format
 error.general=A server error has occurred
 error.invalid-sort-field=Invalid sort field: {0}
 error.invalid-sort-direction=Invalid sort direction: {0} (allowed: asc, desc)
