--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -97,6 +97,7 @@ success.email-verification.resent=인증 이메일이 재발송되었습니다
 error.conflict=데이터 충돌이 발생했습니다
 error.access.denied=이 페이지에 접근할 권한이 없습니다
 error.auth.required=로그인이 필요한 페이지입니다
+error.bad-request=잘못된 요청 형식입니다
 error.general=서버 오류가 발생했습니다
 error.invalid-sort-field=잘못된 정렬 필드입니다: {0}
 error.invalid-sort-direction=잘못된 정렬 방향입니다: {0} (허용: asc, desc)
