feat: UI 개선 및 인증 강화
- Thymeleaf 템플릿 리팩토링 및 사용자 경험 개선
- 사용자 편집 기능을 사용자 상세 페이지로 통합
- 로그인 성공 핸들러 추가 및 마지막 로그인 시간 업데이트 기능
- 전체 템플릿에 대한 일관된 스타일링 적용
- 테스트 커버리지 확대 및 개선

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -29,6 +29,7 @@ error.user.password.same_as_current=New password must be different from current 
 validation.fields.match.mismatch=Provided values do not match
 validation.fields.not_equal.mismatch=Values must be different
 error.user.username.already-exists=Username already in use
+error.user.name.already-exists=Name already in use
 # ========================================
 # Info Messages
 # ========================================
