test: 로깅 시스템 제거에 따른 테스트 코드 정리
- GlobalExceptionHandlerTest에서 MDC 관련 테스트 로직 제거
- MDC.put/verify 호출 제거 및 테스트 명칭 개선
- messages.properties에서 사용되지 않는 로깅 메시지 정리

영향:
- 테스트에서 MDC 복잡성 제거
- 더 단순하고 명확한 테스트 케이스
- 메시지 파일 정리

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,27 +33,9 @@ error.user.name.already-exists=이미 사용 중인 이름입니다
 # ========================================
 info.user.email.verification.sent=이메일 검증 코드가 발송되었습니다
 # ========================================
-# 로그 메시지 - 인증
+# 로그 메시지 - 보안 (간소화)
 # ========================================
 log.auth.login-failed=❌ 로그인 실패: 사용자={0}
-# ========================================
-# 로그 메시지 - 메소드 실행
-# ========================================
-log.method.end=📤 메소드 완료: {0} ({1}ms)
-log.method.error=❌ 메소드 실패: {0} ({1}ms) - {2}
-log.method.start=📥 메소드 시작: {0}
-# ========================================
-# 로그 메시지 - 보안
-# ========================================
-log.security.auth.attempt=🔐 인증 시도: {0}
-log.security.auth.failure=❌ 인증 실패: {0}
-log.security.auth.success=✅ 인증 성공: {0}
-log.security.authorized.access=🔓 인가된 접근: {0}
-# ========================================
-# 로그 메시지 - 요청 처리
-# ========================================
-log.request.format.failed.start=요청 로그 포맷팅 실패 (시작): {0} {1} - {2}
-log.request.format.failed.end=요청 로그 포맷팅 실패 (종료): {0} {1} [{2}] - {3}
 # ========================================
 # 로그 메시지 - 메소드 실행
 # ========================================
