feat(user): add profile image upload form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -80,6 +80,8 @@ log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드
 # ========================================
 success.email-verification.completed=이메일 인증이 완료되었습니다
 success.email-verification.resent=인증 이메일이 재발송되었습니다
+success.user.profile-image.updated=프로필 이미지가 업데이트되었습니다
+success.user.profile-image.removed=프로필 이미지가 삭제되었습니다
 # ========================================
 # 유효성 검증 - 게시판 관련
 # ========================================
