--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -100,6 +100,8 @@ log.user.password.change.failed=Password change failed - current password mismat
 # ========================================
 success.email-verification.completed=Email verification completed
 success.email-verification.resent=Verification email resent
+success.user.profile-image.updated=Profile image updated successfully
+success.user.profile-image.removed=Profile image removed successfully
 error.conflict=Conflict occurred
 error.access.denied=You do not have permission to access this page
 error.auth.required=Login is required to access this page
