--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -100,6 +100,8 @@ log.user.password.change.failed=패스워드 변경 실패 - 현재 패스워드
 # ========================================
 success.email-verification.completed=이메일 인증이 완료되었습니다
 success.email-verification.resent=인증 이메일이 재발송되었습니다
+success.user.profile-image.updated=프로필 이미지가 업데이트되었습니다
+success.user.profile-image.removed=프로필 이미지가 삭제되었습니다
 error.conflict=데이터 충돌이 발생했습니다
 error.access.denied=이 페이지에 접근할 권한이 없습니다
 error.auth.required=로그인이 필요한 페이지입니다
