--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,7 +29,7 @@ validation.fields.not_equal.mismatch=값들이 서로 달라야 합니다
 error.user.username.already-exists=이미 사용 중인 사용자명입니다
 error.user.name.already-exists=이미 사용 중인 이름입니다
 error.user.profile-image.empty=프로필 이미지를 선택해 주세요
-error.user.profile-image.size-exceeded=프로필 이미지는 최대 {0}KB까지만 업로드할 수 있습니다
+error.user.profile-image.size-exceeded=프로필 이미지는 최대 {0}MB까지만 업로드할 수 있습니다
 error.user.profile-image.unsupported=허용되지 않는 이미지 형식입니다. 사용 가능 형식: {0}
 error.user.profile-image.read=프로필 이미지 데이터를 읽는 중 오류가 발생했습니다
 error.user.profile-image.not-found={0} 사용자의 프로필 이미지를 찾을 수 없습니다
@@ -164,7 +164,7 @@ error.invalid-sort-field=잘못된 정렬 필드입니다: {0}
 error.invalid-sort-direction=잘못된 정렬 방향입니다: {0} (허용: asc, desc)
 error.resource.not-found=요청한 리소스를 찾을 수 없습니다
 error.locking.conflict=동시 수정으로 인한 충돌이 발생했습니다
-error.upload.size-exceeded=업로드 파일 크기가 제한을 초과했습니다. 최대 크기: {0}
+error.upload.size-exceeded=업로드 파일 크기가 제한을 초과했습니다. 최대 크기: {0}MB
 error.request.timeout=요청 처리 시간이 초과되었습니다
 # ========================================
 # 에러 상세/공통 메시지 (전역 예외 처리용)
