--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,10 +31,11 @@ validation.fields.not_equal.mismatch=Values must be different
 error.user.username.already-exists=Username already in use
 error.user.name.already-exists=Name already in use
 error.user.profile-image.empty=Please select a profile image to upload
-error.user.profile-image.size-exceeded=Profile images may not exceed {0} KB
+error.user.profile-image.size-exceeded=Profile images may not exceed {0} MB
 error.user.profile-image.unsupported=Unsupported image format. Allowed types: {0}
 error.user.profile-image.read=Unable to read the uploaded profile image
 error.user.profile-image.not-found=Profile image for user {0} was not found
+error.upload.size-exceeded=Uploaded file exceeds the allowed limit. Maximum size: {0} MB
 # ========================================
 # Info Messages
 # ========================================
