--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -31,7 +31,7 @@ validation.fields.not_equal.mismatch=값들이 서로 달라야 합니다
 error.user.username.already-exists=이미 사용 중인 사용자명입니다
 error.user.name.already-exists=이미 사용 중인 이름입니다
 error.user.profile-image.empty=프로필 이미지를 선택해 주세요
-error.user.profile-image.size-exceeded=프로필 이미지는 최대 {0}KB까지만 업로드할 수 있습니다
+error.user.profile-image.size-exceeded=프로필 이미지는 최대 {0}MB까지만 업로드할 수 있습니다
 error.user.profile-image.unsupported=허용되지 않는 이미지 형식입니다. 사용 가능 형식: {0}
 error.user.profile-image.read=프로필 이미지 데이터를 읽는 중 오류가 발생했습니다
 error.user.profile-image.not-found={0} 사용자의 프로필 이미지를 찾을 수 없습니다
