feat: 계층형 댓글 시스템 구현 (Adjacency List + CTE)
PostgreSQL Recursive CTE를 사용한 계층형 댓글 시스템 구현
- Adjacency List 모델로 부모-자식 관계 저장
- 재귀 CTE로 댓글 트리 조회 최적화
- 최대 5단계 깊이 제한

SSR 기반 UI 구현
- URL 파라미터로 폼 표시 제어 (?replyTo, ?editReply)
- 폼 제출 후 #reply-{id} 앵커로 스크롤 위치 유지
- scroll-margin-top으로 헤더 가림 방지
- JavaScript 없이 순수 서버사이드 렌더링

주요 변경사항
- Reply 도메인 및 CQRS 구조 추가
- ReplyRepository에 Native Query로 CTE 구현
- ReplyViewController로 폼 제출 처리 및 리다이렉트
- PermissionEvaluator에 REPLY 권한 추가
- 단위 테스트 추가

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -168,6 +168,29 @@ mask.sensitive=🚫[MASKED_SENSITIVE]
 mask.credential=🗝[MASKED_CREDENTIAL]
 mask.key=🔑[MASKED_KEY]
 # ========================================
+# Error Messages - Reply
+# ========================================
+error.reply.not-found.id=Reply not found. ID: {0}
+error.reply.depth-exceeded=Reply depth limit exceeded (max {0} levels)
+error.reply.parent-not-found=Parent reply not found
+error.reply.board-mismatch=Reply does not belong to the specified board
+# ========================================
+# Validation - Reply
+# ========================================
+validation.reply.content.required=Reply content is required
+validation.reply.content.too-long=Reply is too long (max {0} characters)
+validation.reply.content.invalid=Invalid reply content
+validation.reply.board.required=Board is required
+validation.reply.author.required=Author is required
+# ========================================
+# Log Messages - Reply
+# ========================================
+log.reply.created=Reply created: ID={0}, boardID={1}, author={2}
+log.reply.updated=Reply updated: ID={0}, author={1}
+log.reply.deleted=Reply deleted: ID={0}, author={1}
+# ========================================
 # Exception Title Messages
 # ========================================
 exception.title.email-verification-required=Email Verification Required
+exception.title.reply-not-found=Reply Not Found
+exception.title.reply-depth-exceeded=Reply Depth Exceeded
