--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -167,6 +167,29 @@ mask.sensitive=🚫[MASKED_SENSITIVE]
 mask.credential=🗝[MASKED_CREDENTIAL]
 mask.key=🔑[MASKED_KEY]
 # ========================================
+# 에러 메시지 - 댓글 관련
+# ========================================
+error.reply.not-found.id=댓글을 찾을 수 없습니다. ID: {0}
+error.reply.depth-exceeded=댓글 깊이 제한을 초과했습니다 (최대 {0}단계)
+error.reply.parent-not-found=상위 댓글을 찾을 수 없습니다
+error.reply.board-mismatch=댓글이 해당 게시글에 속하지 않습니다
+# ========================================
+# 유효성 검증 - 댓글 관련
+# ========================================
+validation.reply.content.required=댓글 내용을 입력해주세요
+validation.reply.content.too-long=댓글이 너무 깁니다 (최대 {0}자)
+validation.reply.content.invalid=유효하지 않은 댓글 내용입니다
+validation.reply.board.required=게시글은 필수입니다
+validation.reply.author.required=작성자는 필수입니다
+# ========================================
+# 로그 메시지 - 댓글 관련
+# ========================================
+log.reply.created=댓글 생성됨: ID={0}, 게시글ID={1}, 작성자={2}
+log.reply.updated=댓글 수정됨: ID={0}, 작성자={1}
+log.reply.deleted=댓글 삭제됨: ID={0}, 작성자={1}
+# ========================================
 # 예외 타이틀 메시지
 # ========================================
 exception.title.email-verification-required=이메일 인증 필요
+exception.title.reply-not-found=댓글을 찾을 수 없음
+exception.title.reply-depth-exceeded=댓글 깊이 초과
